--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <p>はじめまして、GitHubへ！</p>
     <p>情報の更新ができていますか？</p>
+    <p>宜しくお願い申しあげます。</p>
+    <p>GitHubとの連携が出来ました！</p>
   </body>
 </html>
