--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiva="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width,initial-scale=1.0">
     <title>Mayuka HYASHI GitHub Site</title>
+    <style>
+      body{
+        background-color:ivory;
+      }
+      main{
+        width:800px;
+        height:600px;
+        background-color:ivory;
+      }
+      blank1.jpg{
+        width:250px;
+        height:250px;
+      }
+    </style>
   </head>
   <body>
-    <p>はじめまして、GitHubへ！</p>
-    <p>情報の更新ができていますか？</p>
-    <p>宜しくお願い申しあげます</p>
-    <p>GitHubとの連携が出来ました！</p>
+    <p>このメニューは、このような材料を使用しています。ゆえに、いつまでも美味しい状態を保っています。是非いかがでしょうか。</p>
+    <img src="images/blanc1.jpg">
   </body>
 </html>
