--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   </head>
   <body>
     <img src="images/blanc1.jpg">
+    <h1>メニュー1</h1>
     <p>このメニューは、このような材料を使用しています。ゆえに、いつまでも美味しい状態を保っています。是非いかがでしょうか。</p>
   </body>
 </html>
