--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       main{
         width:800px;
         height:600px;
-        background-color:ivory;
+        background-color:antiquewhite;
       }
       blank1.jpg{
         width:250px;
