--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
   </head>
   <body>
-    <img src="blanc1.jpg">
+    <img src="blanc1.jpeg">
     <p>メニュー1</p>
     <p>このメニューは、このような材料を使用しています。ゆえに、いつまでも美味しい状態を保っています。是非いかがでしょうか。</p>
   </body>
