--- a/index.html
+++ b/index.html
@@ -14,14 +14,10 @@
         height:600px;
         background-color:antiquewhite;
       }
-      blank1.jpg{
-        width:250px;
-        height:250px;
-      }
     </style>
   </head>
   <body>
-    <img src="blanc1.jpeg">
+    <img src="blanc1.jpeg" width="250px" height="250px">
     <p>メニュー1</p>
     <p>このメニューは、このような材料を使用しています。ゆえに、いつまでも美味しい状態を保っています。是非いかがでしょうか。</p>
   </body>
