--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <body>
     <img src="blanc1.jpeg" width="250px" height="250px">
     <p>メニュー1</p>
-    <p>このメニューは、このような材料を使用しています。ゆえに、いつまでも美味しい状態を保っています。是非いかがでしょうか。</p>
+    <p>このメニューは、このような材料を使用しています。ゆえに、
+      <br>いつまでも美味しい状態を保っています。
+      <br>是非いかがでしょうか。
+    </p>
   </body>
 </html>
