--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     </style>
   </head>
   <body>
-    <img src="blanc1.jpeg" width="250px" height="250px">
+    <img src="IMG_1390.jpeg" width="250px" height="250px">
     <p>メニュー1</p>
-    <p>このメニューは、このような材料を使用しています。ゆえに、
-      <br>いつまでも美味しい状態を保っています。
+    <p>このメニューは、このような材料を使用しています。
+      <br>ゆえに、いつまでも美味しい状態を保っています。
       <br>是非いかがでしょうか。
     </p>
   </body>
