--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       body{
         background-color:ivory;
       }
-      main{
+      ::content{
         width:800px;
         height:600px;
         background-color:antiquewhite;
