--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mayuka HYASHI GitHub Site</title>
     <style>
       body{
-        background-color:ivory;
+        background-color:red;
       }
       ::content{
         width:800px;
