--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width-device-width,initial-scale=1.0">
     <title>Mayuka HYASHI GitHub Site</title>
     <style>
-      body{
+      body{background-color:bisque;}
+      #contents{
         background-color:ivory;
         width:800px;
         height:600px;
@@ -14,11 +15,13 @@
     </style>
   </head>
   <body>
+    <div id="contents">
     <img src="IMG_1390.jpeg" width="250px" height="250px">
     <p>メニュー1</p>
     <p>このメニューは、このような材料を使用しています。
       <br>ゆえに、いつまでも美味しい状態を保っています。
       <br>是非いかがでしょうか。
     </p>
+    </div>
   </body>
 </html>
