--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         background-color:ivory;
         width:800px;
         height:600px;
+        margin:10px 20px;
       }
     </style>
   </head>
