--- a/index.html
+++ b/index.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <meta http-equiva="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width-device-width,initial-scale=1.0">
-    <title>Mayuka HYASHI GitHub Site</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LUXE</title>
     <style>
-      body{background-color:bisque;}
-      #contents{
-        background-color:ivory;
-        width:800px;
-        height:600px;
-        margin:10px 20px;
-      }
+        main{
+            clear:both;
+            width:1000px;
+            padding-top:10px;
+            padding-bottom:10px;
+            padding-left:20px;
+            overflow:hidden;
+        }
+        h2{
+            font-size:24px;
+        }
+        .hotel{
+            width:280px;
+            padding:10px;
+            margin-top:20px;
+            float:left;
+        }
     </style>
-  </head>
-  <body>
-    <div id="contents">
-    <img src="IMG_1390.jpeg" width="250px" height="250px">
-    <p>メニュー1</p>
-    <p>このメニューは、このような材料を使用しています。
-      <br>ゆえに、いつまでも美味しい状態を保っています。
-      <br>是非いかがでしょうか。
-    </p>
-    </div>
-  </body>
+</head>
+<body>
+    <header>
+       <img src="images/kadai01_img01 -5.jpg">
+    </header>
+    <main>
+      <article>
+         <img src="images/kadai01_img01-1.jpg">
+         <h1>Stay in a Stylish and Luxurious Design Space.</h1>
+         <p>The Scenery,and Location Are Perfect,and the Food Is Excellent. This Resort Hotel Is Dedicatd the Enjoyment of Nature's Bounty and the Pursuit of Fine Cuisine.</p>
+         <section class="hotel">
+             <img src="images/kadai01_img01 -2.jpg">
+             <h2>Concept</h2>
+             <p>Star in a stylish and luxurious design space.</p>
+         </section>
+         <section class="hotel">
+             <img src="images/kadai01_img01 -3.jpg">
+             <h2>Hospitality</h2>
+             <p>A true resort life, Wehre the richness of nature heals both body and soul.</p>
+         </section>
+         <section class="hotel">
+             <img src="images/kadai01_img01 -4.jpg">
+             <h2>Restaurant</h2>
+             <p>The hotel is dedicated to the enjoyment og nature's bounty and the pursuit of gastronomy.</p>
+         </section>
+      </article>    
+    </main>   
+</body>
 </html>
