--- a/index.html
+++ b/index.html
@@ -27,25 +27,25 @@
 </head>
 <body>
     <header>
-       <img src="images/kadai01_img01 -5.jpg">
+       <img src="images/kadai01 -5.jpeg">
     </header>
     <main>
       <article>
-         <img src="images/kadai01_img01-1.jpg">
+         <img src="images/kadai01_img01-1.jpeg">
          <h1>Stay in a Stylish and Luxurious Design Space.</h1>
          <p>The Scenery,and Location Are Perfect,and the Food Is Excellent. This Resort Hotel Is Dedicatd the Enjoyment of Nature's Bounty and the Pursuit of Fine Cuisine.</p>
          <section class="hotel">
-             <img src="images/kadai01_img01 -2.jpg">
+             <img src="images/kadai01_img01 -2.jpeg">
              <h2>Concept</h2>
              <p>Star in a stylish and luxurious design space.</p>
          </section>
          <section class="hotel">
-             <img src="images/kadai01_img01 -3.jpg">
+             <img src="images/kadai01_img01 -3.jpeg">
              <h2>Hospitality</h2>
              <p>A true resort life, Wehre the richness of nature heals both body and soul.</p>
          </section>
          <section class="hotel">
-             <img src="images/kadai01_img01 -4.jpg">
+             <img src="images/kadai01_img01 -4.jpeg">
              <h2>Restaurant</h2>
              <p>The hotel is dedicated to the enjoyment og nature's bounty and the pursuit of gastronomy.</p>
          </section>
