--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-       <img src="images/kadai01 -5.jpeg">
+       <img src="images/kadai01_img01 -5.jpeg">
     </header>
     <main>
       <article>
