--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         h2{
             font-size:24px;
         }
+        header{
+            margin-left:280px;
+        }
         .hotel{
             width:280px;
             padding:10px;
