--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <div class="banner">
-            <img src="images/banner.png" alt="バナー">
+            <img src="images/plan.jpeg" alt="バナー">
         </div>
     </footer>   
 </body>
