--- a/training09/contact.html
+++ b/training09/contact.html
@@ -15,6 +15,7 @@
                     <p>お問い合わせや感想などは、下記のメールフォームよりお願いします。</p>
                     <form action="https://api.staticforms.xyz/submit" method="post">
                         <input type="hidden" name="accessKey" value="d14f53ba-ad2e-4e04-a288-cb1681cc994c">
+                    </form>
                 </div>
                 <img src="images/blanc_head.jpg" alt="金のモンブラヘッダー画像">
             <nav>
