--- a/training09/contact.html
+++ b/training09/contact.html
@@ -15,7 +15,6 @@
                     <p>お問い合わせや感想などは、下記のメールフォームよりお願いします。</p>
                     <form action="https://api.staticforms.xyz/submit" method="post">
                         <input type="hidden" name="accessKey" value="d14f53ba-ad2e-4e04-a288-cb1681cc994c">
-                    </form>
                 </div>
                 <img src="images/blanc_head.jpg" alt="金のモンブラヘッダー画像">
             <nav>
@@ -35,7 +34,8 @@
                 <p>当店の商品について質問やご意見については
                     下記フォームよりお問い合わせください。<br>
                     また、任意ですがアンケート内容にも協力お願い致します。</p>
-                <form name="form1" method="get" action="">
+                <form action="https://api.staticforms.xyz/submit" method="post">
+                    <input type="hidden" name="accessKey" value="d14f53ba-ad2e-4e04-a288-cb1681cc994c">
                     <table>
                         <tr>
                             <th>氏名（必須）</th>
