--- a/training09/contact.html
+++ b/training09/contact.html
@@ -34,7 +34,7 @@
                 <p>当店の商品について質問やご意見については
                     下記フォームよりお問い合わせください。<br>
                     また、任意ですがアンケート内容にも協力お願い致します。</p>
-                <form action="https://api.staticforms.xyz/submit" method="post">
+                <form name="form1" action="https://api.staticforms.xyz/submit" method="post">
                     <input type="hidden" name="accessKey" value="d14f53ba-ad2e-4e04-a288-cb1681cc994c">
                     <table>
                         <tr>
