--- a/kadai3/index.html
+++ b/kadai3/index.html
@@ -5,6 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE</title>
+    <style>
+        header{
+            width:640px;
+            margin-left:500px;
+        }
+        h1{
+            font-size: 20px;
+        }
+        main{
+            clear:both;
+            width:1000px;
+            padding-top:10px;
+            padding-bottom:10px;
+            padding-left:20px;
+            overflow:hidden;
+        }
+        h2{
+            font-size:20px;
+        }
+        .hotel{
+            width:200px;
+            padding:10px;
+            margin-top:20px;
+            float:left;
+        }
+    </style>
 </head>
 <body>
     <header>
