--- a/kadai3/concept.html
+++ b/kadai3/concept.html
@@ -34,13 +34,13 @@
 </head>
 <body>
     <header>
-        <img src="images/img01.jpg">
+        <img src="images/img01.jpeg">
      </header>
     <main>
         <article>
             <a href="index.html">HOME</a>
             <a href="concept.html">CONCEPT</a><br>
-            <img src="images/img02.jpg">
+            <img src="images/img02.jpeg">
             <h1>LUXE,a stylesh and luxurious WordPress theme</h1>
             <p>Luxe is a WordPress theme that can be used for hotels,beauty salons,apparel,wedding halls,cosmetic<br>
                 websites,and more. The beautiful and luxurious design is suitable for adding more polish to top-notch brands and<br>
@@ -53,12 +53,12 @@
                anything any other production company can create. 
             </p><br>
             <section class="hotel">
-                <img src="images/img03.jpg">
+                <img src="images/img03.jpeg">
                 <h2>Gentle breeze, sparkling water Chirping birds</h2>
                 <p>The endless blue sea makes you forget your busy life.</p>
             </section>
             <section class="hotel">
-                <img src="images/img04.jpg">
+                <img src="images/img04.jpeg">
                 <h2>Enjoy the blessings of nature and pursue gastronomy.A hotel with a passion for food</h2>
                 <p>Enjoy the freshest fish from the local sea and seasonal vagetables from the region on the acean thrrace. It is not</p>
             </section>
