--- a/kadai3/index.html
+++ b/kadai3/index.html
@@ -5,60 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE</title>
-    <style>
-        header{
-            width:640px;
-            margin-left:500px;
-        }
-        h1{
-            font-size: 20px;
-        }
-        main{
-            clear:both;
-            width:1000px;
-            padding-top:10px;
-            padding-bottom:10px;
-            padding-left:20px;
-            overflow:hidden;
-        }
-        h2{
-            font-size:20px;
-        }
-        .hotel{
-            width:200px;
-            padding:10px;
-            margin-top:20px;
-            float:left;
-        }
-    </style>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <header>
-       <img src="images/kadai01_img01 -5.jpg">
+        <nav>
+          <div class="header_logo">
+             <img src="images/kadai01_img01 -5.jpeg" alt="ロゴ">
+         </div>
+         <ul class="header_navlist">
+             <li>HOME</li>
+             <li>CONCEPT</li>
+             <li>STAY</li>
+             <li>PAGE SAMPLE</li>
+             <li>BLOG</li>
+             <li>CONTACT</li>
+             <li>DOWNLOAD</li>
+          </ul>
+       </nav>
+       <div class="header_logo">
+          <img src="images/kadai01_img01-1.jpeg" alt="メインビジュアル">
+       </div>
     </header>
     <main>
-      <article>
-        <a href="index.html">HOME</a>
-        <a href="concept.html">CONCEPT</a><br>
-         <img src="images/kadai01_img01-1.jpg">
-         <h1>Stay in a Stylish and Luxurious Design Space.</h1>
-         <p>The Scenery,and Location Are Perfect,and the Food Is Excellent. This Resort Hotel Is Dedicatd the Enjoyment of Nature's Bounty and the Pursuit of Fine Cuisine.</p>
-         <section class="hotel">
-             <img src="images/kadai01_img01 -2.jpg">
-             <h2>Concept</h2>
-             <p>Star in a stylish and luxurious design space.</p>
-         </section>
-         <section class="hotel">
-             <img src="images/kadai01_img01 -3.jpg">
-             <h2>Hospitality</h2>
-             <p>A true resort life, Wehre the richness of nature heals both body and soul.</p>
-         </section>
-         <section class="hotel">
-             <img src="images/kadai01_img01 -4.jpg">
-             <h2>Restaurant</h2>
-             <p>The hotel is dedicated to the enjoyment og nature's bounty and the pursuit of gastronomy.</p>
-         </section>
+        <article class="main_content">
+         <h2>Stay in a Stylish and Luxurious Design Space.</h2>
+         <p class="main_content_body">The Scenery,and Location Are Perfect,and the Food Is Excellent. This Resort Hotel Is Dedicatd the Enjoyment of Nature's Bounty and the Pursuit of Fine Cuisine.</p>
+         <div class="main_goodpoints">
+              <section>
+                 <img src="images/kadai01_img01 -2.jpeg" alt="良いところ_1">
+                 <h3>Concept</h3>
+                 <p>Stay in a stylish and luxurious design space.</p>
+              </section>
+             <section>
+                 <img src="images/kadai01_img01 -3.jpeg" alt="良いところ_2">
+                  <h3>Hospitality</h3>
+                  <p>A true resort life, Wehre the richness of nature heals both body and soul.</p>
+             </section>
+             <section>
+                 <img src="images/kadai01_img01 -4.jpeg" alt="良いところ_3">
+                 <h2>Restaurant</h2>
+                 <p>The hotel is dedicated to the enjoyment og nature's bounty and the pursuit of gastronomy.</p>
+            </section>
+          </div>
       </article>    
-    </main>   
+    </main>
+    <footer>
+        <div class="news">
+            <div class="news title">
+                <h2>News Information</h2>
+                <span>Older News</span>
+            </div>
+            <ul class="news_list">
+                <li><span class="news_date">2020.12.18</span><span class="news_text">Update information on "LUXE(tcd022)"</span></li>
+                <li><span class="news_date">2020.09.18</span><span class="news_text">Custom post type "Announcement" is available</span></li>
+                <li><span class="news_date">2020.08.12</span><span class="news_text">WordPress theme "LUXE(tcd022)" is released</span></li>
+            </ul>
+        </div>
+        <div class="banner">
+            <img src="images/plan.jpeg" alt="バナー">
+        </div>
+    </footer>   
 </body>
 </html>
