--- a/kadai3/concept.html
+++ b/kadai3/concept.html
@@ -34,7 +34,20 @@
 </head>
 <body>
     <header>
-        <img src="images/img01.jpeg">
+        <nav>
+            <div class="heade_logo">
+                <img src="images/img01.jpeg">
+            </div>
+            <ur class="header_navlist">
+                <li>HOME</li>
+                <li>CONCEPT</li>
+                <li>STAY</li>
+                <li>PAGE SAMPLE</li>
+                <li>BLOG</li>
+                <li>CONTACT</li>
+                <li>DOWNLOAD</li>
+            </ur>
+        </nav>
      </header>
     <main>
         <article>
