--- a/kadai3/index.html
+++ b/kadai3/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
           <div class="header_logo">
-             <img src="images/kadai01_img01 -5.jpeg" alt="ロゴ">
+             <img src="images/kadai01_img01 -5.jpg" alt="ロゴ">
          </div>
          <ul class="header_navlist">
              <li>HOME</li>
@@ -24,7 +24,7 @@
           </ul>
        </nav>
        <div class="header_logo">
-          <img src="images/kadai01_img01-1.jpeg" alt="メインビジュアル">
+          <img src="images/kadai01_img01-1.jpg" alt="メインビジュアル">
        </div>
     </header>
     <main>
@@ -33,17 +33,17 @@
          <p class="main_content_body">The Scenery,and Location Are Perfect,and the Food Is Excellent. This Resort Hotel Is Dedicatd the Enjoyment of Nature's Bounty and the Pursuit of Fine Cuisine.</p>
          <div class="main_goodpoints">
               <section>
-                 <img src="images/kadai01_img01 -2.jpeg" alt="良いところ_1">
+                 <img src="images/kadai01_img01 -2.jpg" alt="良いところ_1">
                  <h3>Concept</h3>
                  <p>Stay in a stylish and luxurious design space.</p>
               </section>
              <section>
-                 <img src="images/kadai01_img01 -3.jpeg" alt="良いところ_2">
+                 <img src="images/kadai01_img01 -3.jpg" alt="良いところ_2">
                   <h3>Hospitality</h3>
                   <p>A true resort life, Wehre the richness of nature heals both body and soul.</p>
              </section>
              <section>
-                 <img src="images/kadai01_img01 -4.jpeg" alt="良いところ_3">
+                 <img src="images/kadai01_img01 -4.jpg" alt="良いところ_3">
                  <h2>Restaurant</h2>
                  <p>The hotel is dedicated to the enjoyment og nature's bounty and the pursuit of gastronomy.</p>
             </section>
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <div class="banner">
-            <img src="images/plan.jpeg" alt="バナー">
+            <img src="images/plan.jpg" alt="バナー">
         </div>
     </footer>   
 </body>
