--- a/kadai3/index.html
+++ b/kadai3/index.html
@@ -29,6 +29,8 @@
     </header>
     <main>
         <article class="main_content">
+         <a href="index.html">HOME</a>
+         <a href="concept.html">CONCEPT</a>
          <h2>Stay in a Stylish and Luxurious Design Space.</h2>
          <p class="main_content_body">The Scenery,and Location Are Perfect,and the Food Is Excellent. This Resort Hotel Is Dedicatd the Enjoyment of Nature's Bounty and the Pursuit of Fine Cuisine.</p>
          <div class="main_goodpoints">
