--- a/kadai3/concept.html
+++ b/kadai3/concept.html
@@ -6,37 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LUXE</title>
     <style>
-        header{
-            width:640px;
-            margin-left:500px;
-        }
-        h1{
-            font-size: 20px;
-        }
-         main{
-            clear:both;
-            width:1000px;
-            padding-top:10px;
-            padding-bottom:10px;
-            padding-left:20px;
-            overflow:hidden;
-         }
-         h2{
-            font-size:20px;
-        }
-        .hotel{
-            width:350px;
-            padding:10px;
-            margin-top:20px;
-            float:left;
-        }
+     body{
+         margin:0;
+     }
+     .header_logo{
+         text-align:center;
+     }
+     .header_navlist{
+         display:flex;
+         justify-content:center;
+         flex-wrap:wrap;
+         border-top:1px solid#ddd;
+         border-bottom:1px solid#ddd;
+     } 
+     .header_navlist li{
+         margin:16px 28px;
+         list-style:none;
+     }
+     .header_mainvisual{
+         margin:40px;
+     }
+     .header_mainvisual{
+         width:100%;
+         border:10px solid#ddd;
+         box-sizing:border-box;
+     }
+     main{
+         margin:0 40px;
+     }
+     .main_content h2{
+         font-family:serif;
+         font-weight:normal;
+         text-align:center;
+     }
+     .main_content_body{
+         text-align:center
+     }
+     .main_place{
+         display:flex;
+         justify-content:space-between;
+     }
+      .main_place section{
+         width:31%;
+     }
+      .main_place section img{
+         width:100%;
+     }
     </style>
 </head>
 <body>
     <header>
         <nav>
             <div class="heade_logo">
-                <img src="images/img01.jpeg">
+                <img src="images/img01.jpeg" alt="ロゴ" >
             </div>
             <ur class="header_navlist">
                 <li>HOME</li>
@@ -48,33 +70,37 @@
                 <li>DOWNLOAD</li>
             </ur>
         </nav>
+        <div class="header_logo">
+            <img src="images/img02.jpeg" alt="メインビジュアル">
+        </div>
      </header>
     <main>
-        <article>
+        <article class="main_content">
             <a href="index.html">HOME</a>
             <a href="concept.html">CONCEPT</a><br>
-            <img src="images/img02.jpeg">
-            <h1>LUXE,a stylesh and luxurious WordPress theme</h1>
-            <p>Luxe is a WordPress theme that can be used for hotels,beauty salons,apparel,wedding halls,cosmetic<br>
+            <h2>LUXE,a stylesh and luxurious WordPress theme</h2>
+            <p class="main_content_body">Luxe is a WordPress theme that can be used for hotels,beauty salons,apparel,wedding halls,cosmetic<br>
                 websites,and more. The beautiful and luxurious design is suitable for adding more polish to top-notch brands and<br>
                 can greatly improve their image.
             </p>
-            <p>                                                                          </p>
-            <p>                                                                          </p>
-            <p>Many wecsites do not focus on beauty,especially in industries where beauty and image are important,such as<br>
+            <p class="main_content_body">                                                                          </p>
+            <p class="main_content_body">                                                                          </p>
+            <p class="main_content_body">Many wecsites do not focus on beauty,especially in industries where beauty and image are important,such as<br>
                hotels and beauty salons. With LUXE, you can create a ceautiful site at an undelivably low cost, better than<br>
                anything any other production company can create. 
             </p><br>
-            <section class="hotel">
-                <img src="images/img03.jpeg">
-                <h2>Gentle breeze, sparkling water Chirping birds</h2>
-                <p>The endless blue sea makes you forget your busy life.</p>
-            </section>
-            <section class="hotel">
-                <img src="images/img04.jpeg">
-                <h2>Enjoy the blessings of nature and pursue gastronomy.A hotel with a passion for food</h2>
-                <p>Enjoy the freshest fish from the local sea and seasonal vagetables from the region on the acean thrrace. It is not</p>
-            </section>
+            <div class="main_place">
+              <section>
+                 <img src="images/img03.jpeg" alt="海">
+                 <h2>Gentle breeze, sparkling water Chirping birds</h2>
+                 <p>The endless blue sea makes you forget your busy life.</p>
+              </section>
+              <section>
+                 <img src="images/img04.jpeg" alt="ホテル">
+                 <h2>Enjoy the blessings of nature and pursue gastronomy.A hotel with a passion for food</h2>
+                 <p>Enjoy the freshest fish from the local sea and seasonal vagetables from the region on the acean thrrace. It is not</p>
+             </section>
+            </div>
         </article>
     </main>
 </body>
