--- a/kadai3/concept.html
+++ b/kadai3/concept.html
@@ -57,7 +57,7 @@
 <body>
     <header>
         <nav>
-            <div class="heade_logo">
+            <div class="header_logo">
                 <img src="images/img01.jpeg" alt="ロゴ" >
             </div>
             <ur class="header_navlist">
