--- a/kadai3/concept.html
+++ b/kadai3/concept.html
@@ -48,6 +48,7 @@
      }
       .main_place section{
          width:100%;
+         float:left;
      }
       .main_place section img{
          width:100%;
