--- a/training_js02/index.html
+++ b/training_js02/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <img src="IMG_1588.jpeg">  
-  <script src="image.js"></script>
+  <img src="IMG_1588.jpeg" onclick="alert('タヒチの写真です。');">  
 </body>
 </html>
