--- a/training_js02-1/index.html
+++ b/training_js02-1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <img src="IMG_1588.jpeg" onclick="alert('タヒチの写真です。');">  
+  <img src="IMG_1588.jpeg" onmouseover="alert('タヒチの写真です。');">  
 </body>
 </html>
