--- a/training_js04-2/index.html
+++ b/training_js04-2/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h3>問題</h3>
-   <p>日本で一番長い川は？ <button onclik="showAnser();">解答を見る</button></p>
+   <p>日本で一番長い川は？ <button onclick="showAnser();">解答を見る</button></p>
    <script>
     function showAnser() {
         let anser = '信濃川';
