--- a/training_js05-1/index.html
+++ b/training_js05-1/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>変数の利用</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>変数の演算</h1>
     <p>a=10、b=4の場合</p>
+    <td><a href="#" class="btn1">足し算</a></td>
+    <td><a href="#" class="btn2">引き算</a></td>
+    <td><a href="#" class="btn3">掛け算</a></td>
+    <td><a href="#" class="btn4">割り算</a></td>
     <script>
         var answer;
         var a=10,b=4;
@@ -15,16 +20,16 @@
           answer=a+b;
         }
         function subtract(){
-          
+          answer=a-b;
         }
         function multiply(){
-
+          answer=a*b;
         }
         function divide(){
-
+          answer=a/b;
         }
         function alert(){
-            alert("") 
+            alert("答えは+answer+です") 
         }
     </script>
 </body>
