--- a/training_js05-1/index.html
+++ b/training_js05-1/index.html
@@ -13,6 +13,7 @@
     <td><a href="#" class="btn2">引き算</a></td>
     <td><a href="#" class="btn3">掛け算</a></td>
     <td><a href="#" class="btn4">割り算</a></td>
+    <input type="submit" value="実行" onclick="submitbtn();">
     <script>
         var answer;
         var a=10,b=4;
@@ -28,7 +29,7 @@
         function divide(){
           answer=a/b;
         }
-        function alert(){
+        function submitbtn(){
             alert("答えは+answer+です") 
         }
     </script>
