--- a/training_js05-1/index.html
+++ b/training_js05-1/index.html
@@ -28,7 +28,7 @@
         function divide(){
           answer=a/b;
         }
-        function submitbtn(){
+        function alert(){
             alert("答えは+answer+です") 
         }
     </script>
