--- a/training_js06-1/index.html
+++ b/training_js06-1/index.html
@@ -9,28 +9,16 @@
   <h1>利用料の計算</h1>
   <table border="1" class="botan"></table>
   <tr>
-    <th>NO.</th>
-    <th>料金(a)</th>
-    <th>人数(b)</th>
-    <th>a×b</th>
+    <th>NO.</th><th>料金(a)</th><th>人数(b)</th><th>a×b</th>
   </tr>
   <tr>
-    <td style=" background:rgb(240, 126, 19)">0</td>
-    <td>500</td>
-    <td>10</td>
-    <td><button onclick="multiply_0();">利用料の合計</button></td>
+    <td style=" background:rgb(240, 126, 19)">0</td><td>500</td><td>10</td><td><button onclick="multiply_0();">利用料の合計</button></td>
   </tr>
   <tr>
-    <td  style=" background:rgb(240, 126, 19)">1</td>
-    <td>980</td>
-    <td>16</td>
-    <td><button onclick="multiply_1();">利用料の合計</button></td>
+    <td  style=" background:rgb(240, 126, 19)">1</td><td>980</td><td>16</td><td><button onclick="multiply_1();">利用料の合計</button></td>
   </tr>
   <tr>
-    <td style=" background:rgb(240, 126, 19)">2</td>
-    <td>1200</td>
-    <td>8</td>
-    <td><button onclick="multiply_2();">利用料の合計</button></td>
+    <td style=" background:rgb(240, 126, 19)">2</td><td>1200</td><td>8</td><td><button onclick="multiply_2();">利用料の合計</button></td>
   </tr>
   <script>
     let a =[500,980,1200];
