--- a/training_js06-1/index.html
+++ b/training_js06-1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>利用料の計算</h1>
-  <table border="1"></table>
+  <table>
   <tr>
     <th>NO.</th>
     <th>料金(a)</th>
@@ -32,6 +32,7 @@
     <td>8</td>
     <td><button onclick="multiply_2();">利用料の合計</button></td>
   </tr>
+  </table>
   <script>
     let a =[500,980,1200];
     let b =[10,16,8];
