--- a/training_js06-1/index.html
+++ b/training_js06-1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>利用料の計算</h1>
-  <table>
+  <table border="1" style="border-collapse: collapse">
   <tr>
     <th>NO.</th>
     <th>料金(a)</th>
