--- a/training_js06-1/index.html
+++ b/training_js06-1/index.html
@@ -9,25 +9,25 @@
   <h1>利用料の計算</h1>
   <table border="1" style="border-collapse: collapse">
   <tr>
-    <th>NO.</th>
-    <th>料金(a)</th>
-    <th>人数(b)</th>
-    <th>a×b</th>
+    <th style="background:rgb(230, 169, 122)">NO.</th>
+    <th style="background:rgb(230, 169, 122)">料金(a)</th>
+    <th style="background:rgb(230, 169, 122)">人数(b)</th>
+    <th style="background:rgb(230, 169, 122)">a×b</th>
   </tr>
   <tr>
-    <td>0</td>
+    <td style="background:rgb(230, 169, 122)">0</td>
     <td>500</td>
     <td>10</td>
     <td><button onclick="multiply_0();">利用料の合計</button></td>
   </tr>
   <tr>
-    <td>1</td>
+    <td style="background:rgb(230, 169, 122)">1</td>
     <td>980</td>
     <td>16</td>
     <td><button onclick="multiply_1();">利用料の合計</button></td>
   </tr>
   <tr>
-    <td>2</td>
+    <td style="background:rgb(230, 169, 122)">2</td>
     <td>1200</td>
     <td>8</td>
     <td><button onclick="multiply_2();">利用料の合計</button></td>
