--- a/training_js06-2/index.html
+++ b/training_js06-2/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>座席の予約</h1>
     <p>東京会場</p>
+    <script>
+        document.getElementById("newButton").onclick = function() {
+    document.getElementById("happy").innerHTML = "Yeah"
+    }
+    </script>
 </body>
 </html>
