--- a/training_js06-2/index.html
+++ b/training_js06-2/index.html
@@ -11,7 +11,8 @@
     <button id="newButton">予約する</button>
     <script>
         document.getElementById("newButton").onclick = function() {
-        document.getElementById("rese").innerHTML = "予約済み"
+        document.getElementById("rese").innerHTML = "(予約済み)"
+        document.getElementById("rese").style.color="red";
     }
     </script>
 </body>
