--- a/training_js06-2/index.html
+++ b/training_js06-2/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>座席の予約</h1>
-    <p>東京会場</p><p id="rese"><font color="red">(予約受付中)</font></p>
+    <p>東京会場<font color="red" id="rese">(予約受付中)</font></p>
     <button id="newButton">予約する</button>
     <script>
         document.getElementById("newButton").onclick = function() {
