--- a/training_js08-1/index.html
+++ b/training_js08-1/index.html
@@ -7,11 +7,22 @@
 </head>
 <body>
   <h1>人口の多い国ランキング</h1>
-  <p>1.中国</p><br>
-  <p>2.インド</p><br>
-  <p>3.アメリカ</p><br>
-  <p>4.インドネシア</p><br>
-  <button>国旗で表示</button>
-  
+  <ul id="country">
+    <li>1.中国</li>
+    <li>2.インド</li>
+    <li>3.アメリカ</li>
+    <li>4.インドネシア</li>
+  </ul>
+  <button class="btn show" id="btn1">国旗で表示</button>
+  <img src="flag_CHN.png"/>
+  <img src="flag_IDN.png"/>
+  <img src="flag_IND.png"/>
+  <img src="flag_USA.png"/>
+  <script>
+   function get_li(){
+    let list = document.querySelectorAll('li');
+    console.log(list);
+   }
+  </script>
 </body>
 </html>
