--- a/training_js08-1/index.html
+++ b/training_js08-1/index.html
@@ -7,22 +7,17 @@
 </head>
 <body>
   <h1>人口の多い国ランキング</h1>
-  <ul id="country">
-    <li>1.中国</li>
-    <li>2.インド</li>
-    <li>3.アメリカ</li>
-    <li>4.インドネシア</li>
-  </ul>
+  <p>1.中国</p>
+  <p>2.インド</p>
+  <p>3.アメリカ</p>
+  <p>4.インドネシア</p>
   <button class="btn show" id="btn1">国旗で表示</button>
   <img src="flag_CHN.png"/>
   <img src="flag_IDN.png"/>
   <img src="flag_IND.png"/>
   <img src="flag_USA.png"/>
   <script>
-   function get_li(){
-    let list = document.querySelectorAll('li');
-    console.log(list);
-   }
+   
   </script>
 </body>
 </html>
