--- a/training_js08-1/index.html
+++ b/training_js08-1/index.html
@@ -7,17 +7,22 @@
 </head>
 <body>
   <h1>人口の多い国ランキング</h1>
-  <p>1.中国</p>
-  <p>2.インド</p>
-  <p>3.アメリカ</p>
-  <p>4.インドネシア</p>
-  <button class="btn show" id="btn1">国旗で表示</button>
+  <p id="cn1">1.中国</p>
+  <p id="cn2">2.インド</p>
+  <p id="cn3">3.アメリカ</p>
+  <p id="cn4">4.インドネシア</p>
+  <button  id="btn1">国旗で表示</button>
   <img src="flag_CHN.png"/>
   <img src="flag_IDN.png"/>
   <img src="flag_IND.png"/>
   <img src="flag_USA.png"/>
   <script>
-   
+   document.getElementById("btn1").onclick = function(){
+    document.getElementById("cn1").p="flag_CHN.png";
+    document.getElementById("cn2").p="flag_IND.png";
+    document.getElementById("cn3").p="flag_USA.png";
+    document.getElementById("cn4").p="flag_IDN.png";
+  } 
   </script>
 </body>
 </html>
