--- a/training_js08-1/index.html
+++ b/training_js08-1/index.html
@@ -13,6 +13,10 @@
   <p id="cn4">4.インドネシア</p>
   <button  id="btn1">国旗で表示</button>
   <script>
+   document.write('<img src="c3220510/www/training_js08-1/flag_CHN.png">');
+   document.write('<img src="c3220510/www/training_js08-1/"flag_IND.png">');
+   document.write('<img src="c3220510/www/training_js08-1/"flag_USA.png">');
+   document.write('<img src="c3220510/www/training_js08-1/"flag_IDN.png">');
    document.getElementById("btn1").onclick = function(){
     document.getElementById("cn1").p="flag_CHN.png";
     document.getElementById("cn2").p="flag_IND.png";
