--- a/training_js08-1/index.html
+++ b/training_js08-1/index.html
@@ -7,22 +7,17 @@
 </head>
 <body>
   <h1>人口の多い国ランキング</h1>
-  <p id="list" class="hidden"></p>>1.中国</p>
-  <p id="list" class="hidden">2.インド</p>
-  <p id="list" class="hidden">3.アメリカ</p>
-  <p id="list" class="hidden">4.インドネシア</p>
-  <button  id="button">国旗で表示</button>
-  <style>
-    .hidden{
-      display:none;
-    }
-  </style>
+  <ul id="people">
+  <li>1.中国</li>
+  <li>2.インド</li>
+  <li>3.アメリカ</li>
+  <li>4.インドネシア</li>
+  </ul>
+  <button>国旗で表示</button>
   <script>
-     const btn = document.getElementById("button");
-     const list = document.getElementById("list");
-     btn.addEventListener("click",function(){
-      list.classList.toggle("hidden")
-     });
+
+   let list=document.querySelectorAll('#people li');
+   
   </script>
 </body>
 </html>
