--- a/training_js10/index.html
+++ b/training_js10/index.html
@@ -11,7 +11,14 @@
     <button onclick="check(1)">ヒントをみる</button>
     <p>（注意）北海道は県ではありません。</p>
 
-    
+    <script>
+        function check(x){
+            let text;
+            if(x==1){
+                text='東北地方にあります。';
+            }
+        }
+    </script>
 </body>
 </body>
 </html>
