--- a/training_js10/index.html
+++ b/training_js10/index.html
@@ -8,10 +8,14 @@
 <body>
     <h3>問題</h3>
     <p>最も面積が大きい「県」は何県でしょう</p>
-    <button onclick="check(1)">ヒントをみる</button>
+    <button onclick="check(1)" id="btn">ヒントをみる</button>
     <p>（注意）北海道は県ではありません。</p>
 
     <script>
+        const btn = document.getElementById('btn');
+        btn.addEventListener('click', () => {
+        btn.textContent = '答えを見る';
+        })
         function check(x){
             let text;
             if(x==1){
