--- a/training_js10/index.html
+++ b/training_js10/index.html
@@ -9,12 +9,16 @@
     <h3>問題</h3>
     <p>最も面積が大きい「県」は何県でしょう</p>
     <button onclick="check()" id="btn">ヒントをみる</button>
-    <p>（注意）北海道は県ではありません。</p>
+    <div id="ho">（注意）北海道は県ではありません。</div>
     <script>
         const btn = document.getElementById('btn');
         btn.addEventListener('click', () => {
         btn.textContent = '答えを見る';
         })
+        function OnButtonClick() {
+         document.getElementById("output_sample").innerHTML = "東北地方にあります。";
+         }
+         
     </script>
 </body>
 </body>
