--- a/training_js10/index.html
+++ b/training_js10/index.html
@@ -18,8 +18,9 @@
         function OnButtonClick() {
          document.getElementById("output_sample").innerHTML = "東北地方にあります。";
          }
-         
+
     </script>
+      <p id="output_sample"></p>
 </body>
 </body>
 </html>
