--- a/training_js10/index.html
+++ b/training_js10/index.html
@@ -9,7 +9,7 @@
     <h3>問題</h3>
     <p>最も面積が大きい「県」は何県でしょう</p>
     <button onclick="check()" id="btn">ヒントをみる</button>
-    <div id="ho">（注意）北海道は県ではありません。</div>
+    <div>（注意）北海道は県ではありません。</div>
     <script>
         const btn = document.getElementById('btn');
         btn.addEventListener('click', () => {
@@ -20,7 +20,7 @@
          }
 
     </script>
-      <p id="output_sample"></p>
+      <div id="output_sample"></div>
 </body>
 </body>
 </html>
