--- a/training_js10/index.html
+++ b/training_js10/index.html
@@ -16,11 +16,11 @@
         btn.textContent = '答えを見る';
         })
         function OnButtonClick() {
-         document.getElementById("output_sample").innerHTML = "東北地方にあります。";
+         document.getElementById("output").innerHTML = "東北地方にあります。";
          }
 
     </script>
-      <div id="output_sample"></div>
+      <div id="output"></div>
 </body>
 </body>
 </html>
