--- a/training_js11-1/index.html
+++ b/training_js11-1/index.html
@@ -23,9 +23,15 @@
 
 <script>
     function show(){
-        let anser = [3];
+        let anser = [2,14,37];
         let count = 0;
-        
+        for(){
+
+            if(anser >=38){
+               break;
+            }
+
+        }
     }
 </script>
 
