--- a/training_js11-1/index.html
+++ b/training_js11-1/index.html
@@ -25,9 +25,10 @@
     function show(){
         let anser = [2,14,37];
         let count = 0;
-        for(){
-
+        for(let i = 1; i <= 38; i++){
+            
             if(anser >=38){
+                count = 3;
                break;
             }
 
