--- a/training_js11-1/index.html
+++ b/training_js11-1/index.html
@@ -25,14 +25,12 @@
     function show(){
         let anser = [2,14,37];
         let count = 0;
-        for(let i = 1; i <= 38; i++){
-            
-            if(anser >=38){
-                count = 3;
-               break;
+        for(let i = 1; i <= 100; i++){
+            if(ansser >= 40){
+              break;
             }
-
         }
+        document.getElementById("massage").textContent = anser+"が解です。";  
     }
 </script>
 
