--- a/training_js11-2/index.html
+++ b/training_js11-2/index.html
@@ -25,7 +25,7 @@
     function show(){
         let anser = [2,14,37];
         let count = 0;
-        for(let i = 1; i <= 100; i++){
+        while(let i = 1; i <= 100; i++){
             if(anser >= 40){
               break;
             }
