--- a/training_js11-1/index.html
+++ b/training_js11-1/index.html
@@ -26,7 +26,7 @@
         let anser = [2,14,37];
         let count = 0;
         for(let i = 1; i <= 100; i++){
-            if(ansser >= 40){
+            if(anser >= 40){
               break;
             }
         }
