--- a/training_js11-2/index.html
+++ b/training_js11-2/index.html
@@ -25,10 +25,9 @@
     function show(){
         let anser = [2,14,37];
         let count = 0;
-        while(let i = 1; i <= 100; i++){
-            if(anser >= 40){
-              break;
-            }
+        while(anser >= 40){
+         let i = 1; i <= 100; i++;
+         break;
         }
         document.getElementById("massage").textContent = anser+"が解です。";  
     }
