--- a/training12-1/index.html
+++ b/training12-1/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>関数の戻り値</title>
     <style>
-        #messsage{
+        #message{
             width: 650px;
             padding: 15px;
             margin:25px 0px;
