--- a/training12-1/index.html
+++ b/training12-1/index.html
@@ -18,7 +18,7 @@
     <p>１、２、３、４、５、６、７、８、９、１０で<br>
        割り切れる最小の数値をJavaScriptで求めます。</p>
     <button onclick="show()">結果を見る</button>
-    <div id="massage">ここに結果が表示されます。</div>
+    <div id="message">ここに結果が表示されます。</div>
     <script>
         function show(){
             let text = '';
@@ -28,7 +28,7 @@
                 }
                 text =text +i + '、';
             }
-            document.getElementById('massage').textContent = text;
+            document.getElementById('message').textContent = text;
         }
     </script>
 </body>
