--- a/training_js07-1/index.html
+++ b/training_js07-1/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <script>
+    function greetings(){
+        const today = new Date()
+        
+    }
+   </script> 
 </body>
 </html>
