--- a/training_js07-1/index.html
+++ b/training_js07-1/index.html
@@ -9,7 +9,10 @@
    <script>
     function greetings(){
         const today = new Date()
-        
+        const hour = 
+        if(hour >= 5 && hour < 9)return"おはようございます"
+        eleseif(hour>=18) return "こんにちは"
+
     }
    </script> 
 </body>
