--- a/training_js07-1/index.html
+++ b/training_js07-1/index.html
@@ -12,7 +12,7 @@
         const hour = 
         if(hour >= 5 && hour < 9)return"おはようございます"
         eleseif(hour>=18) return "こんにちは"
-        
+        else return"こんばんは"
     }
    </script> 
 </body>
