--- a/training_js07-1/index.html
+++ b/training_js07-1/index.html
@@ -8,11 +8,15 @@
 <body>
    <script>
     function greetings(){
-        const today = new Date()
-        const hour = 
-        if(hour >= 5 && hour < 9)return"おはようございます"
-        eleseif(hour>=18) return "こんにちは"
-        else return"こんばんは"
+        const today = new Date();
+        const hour = new Date().getHours();
+        if(hour >= 5 && hour < 9){
+            return"おはようございます";
+        }else if(hour <= 18){
+            return"こんにちは";
+        }else{
+            return"こんばんは";
+        }
     }
    </script> 
 </body>
