--- a/training_js07-1/index.html
+++ b/training_js07-1/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   <script>
+ <button onclick = "greetings()">あいさつを表示</button>
+ <script>
     function greetings(){
         const today = new Date();
         const hour = new Date().getHours();
@@ -18,6 +19,6 @@
             return"こんばんは";
         }
     }
-   </script> 
+ </script> 
 </body>
 </html>
