--- a/training_js13-1/index.html
+++ b/training_js13-1/index.html
@@ -27,7 +27,7 @@
             for(let i = min; i <= max; i++){
                 let flag = check(i);
                 if(flag) {
-                    text = text + i + '、';
+                    text = min + max + 'で割り切れる数値は' + text + i + 'です';
                 }
             }
             document.getElementById('message').textContent = text;
