--- a/training_js14-1/index.html
+++ b/training_js14-1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h3>問題</h3>
-    <p>日本の首都はどこ？'</p>
+    <p>日本の首都はどこ？</p>
     <button onclick="check(1)">東京</button>
     <button onclick="check(2)">大阪</button>
     <button onclick="check(3)">名古屋</button>
