--- a/training_js14/index.html
+++ b/training_js14/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1 id="question">問題文</h1>
-  <ul id="choices"></ul>
+  <button id="choices"></button>
   <button id="nextBtn">次の問題へ</button>
   <p>スコア：<span id="score">0</span></p>
   <script>
