--- a/kuizugame/index.html
+++ b/kuizugame/index.html
@@ -21,6 +21,11 @@
        question: '利根川は何県にある？',
        choices: ['静岡県', '群馬県', '神奈川県', '長野県'],
        answer: '群馬県'
+     },
+     {
+      question: '白川郷は何県にある？',
+      choices: ['長野県','富山県','岐阜県','石川県'],
+      answer: '岐阜県'
      }
      ];
      let currentQuestionIndex = 0;
